      between the dequeuing and enqueuing stages. It may also useful
      to synchronise the image acquisition with an other sensor.
    - vpDot2: The tracking is restarted in vpDot2::track() if a dot is found 
      but is not valid.
  - Examples:
    - New plotting example in example/tools/plot.cpp
    - In grab1394Two.cpp example, addition of [-r] new option to reset the bus.
  - Bug fixed
    - [7638] Memory leak in all vpFeature... classes was reopened
    - [7888] vpV4l2Grabber cannot acquire an image from an analog camera 
	     on Ubuntu 8.04 Hardy Heron
    - [7994] vpMeLine : initialization problem for horizontal lines
    - [8001] Coin and SoQt are not detected during CMake configuration
	     under Fedora 10
    - [8032] Link error whith GSL while compiling HelloWorld.cpp on OSX
    - [8225] Bug in the multiplication of a twist matrix (6x6) by a matrix (6xn)
    - [8248] Compilation error under Windows MSCV8 if deprecated functions 
	     are not build
    - [8249] Compilation error under Windows MSCV8 when building ViSP 
	     as a shared library (DLL)
    - [8257] Bug in vp1394TwoGrabber::resetBus()
    - [8259] Segfault in vpDisplayX
    - [8389] vpKltOpencv : Bug in the copy constructor
    - [8493] Problem to build ViSP as a dynamic library under windows (Visual C++)
    - [8495] Segmentation fault during the execution of the example grabDirectShow
----------------------------------------------	
ViSP 2.4.3 (released April 10th, 2009)
  - New Features
    - Add vpFeaturePointPolar corresponding the a 2D image point with 
      polar coordinates visual feature.
    - Add vpFeatureTranslation for cto (camera to object translation feature)
    - Add vpDisplay::setWindowPosition() functionality
  - Bug fixed
    - [7281] Segfault when displaying a vpCylinder.
    - [7308] Rotation vector not initialized to zero by the default constructor
    - [7309] visp-config --cflags produces a bad output