@@ -24,6 +24,9 @@ ViSP 2.x.y
   - Examples:
     - New plotting example in example/tools/plot.cpp
     - In grab1394Two.cpp example, addition of [-r] new option to reset the bus.
+    - New examples to show how to build a 3D visual servoing without using the
+      vpServo and vpFeature classes: servoSimu3D_cMcd_CamVelocityWithoutVpServo.cpp
+      and servoSimu3D_cdMc_CamVelocityWithoutVpServo.cpp
   - Bug fixed
     - [7638] Memory leak in all vpFeature... classes was reopened
     - [7888] vpV4l2Grabber cannot acquire an image from an analog camera 
